--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
         <a href="https://twitter.com/AlienWareUtils" class="twitter"><i class="bx bxl-twitter"></i></a>\
-        <a href="cdn/servers/Discord.html" class="discord"><i class="bx bxl-discord"></i></a>
+        <a href="Discord.html" class="discord"><i class="bx bxl-discord"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
